syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.regions.input";

import "properties/properties.proto";
import "reports/reports.proto";
import "google/protobuf/any.proto";


message RegionIdInput {
    google.protobuf.Any id = 1;
}

message SimpleRegionIdInput {
    google.protobuf.Any value = 1;
}

message RegionPropertyIdInput {
    google.protobuf.Any id = 1;
}

message SimpleRegionPropertyIdInput {
    google.protobuf.Any value = 1;
}

message RegionMembershipInput {
    message RegionPersonInfo {
        int32 personId = 1;
        optional double arrivalTime = 3;
    }
    RegionIdInput regionId = 1;
    repeated RegionPersonInfo people = 2;
}

message RegionPropertyValueMapInput {
   RegionIdInput regionId = 1;
   repeated PropertyValueMapInput propertyValueMap = 2;
}

message RegionPropertyDimensionInput {
    RegionIdInput regionId = 1;
    RegionPropertyIdInput regionPropertyId = 2;
    repeated google.protobuf.Any values = 3;
}

message RegionsPluginDataInput {
    repeated RegionIdInput regionIds = 1;
    repeated PropertyDefinitionMapInput regionPropertyDefinitions = 2;
    repeated RegionPropertyValueMapInput regionPropertyValues = 3;
    repeated RegionMembershipInput personRegions = 4;
    bool trackRegionArrivalTimes = 5;
}

message RegionPropertyReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
    repeated RegionPropertyIdInput includedProperties = 3;
    repeated RegionPropertyIdInput excludedProperties = 4;
    bool defaultInclusionPolicy = 5;
}

message RegionTransferReportPluginDataInput {
    ReportLabelInput reportLabel = 1;
    ReportPeriodInput reportPeriod = 2;
}

message RegionFilterInput {
    repeated RegionIdInput regionIds = 1;
}
