syntax = "proto3";
package gov.hhs.aspr.gcm.translation.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.gcm.translation.protobuf.plugins.people.input";


message PersonIdInput {
    int32 id = 1;
}

message PersonRangeInput {
    int32 lowPersonId = 1;
    int32 highPersonId = 2;
}

message PeoplePluginDataInput {
    repeated PersonRangeInput personRanges = 1;
    optional int32 personCount = 2;
}
